creusot/tests/should_fail/terminates/default_function_non_logic.stderr
error: Mutually recursive functions: when calling `<i32 as Foo>::g`...
  --> default_function_non_logic.rs:13:5
   |
13 |     fn g() {
   |     ^^^^^^
   |
note: then `<i32 as Foo>::g` might call `<i32 as Foo>::g` via the call to `Foo::f`.
  --> default_function_non_logic.rs:14:9
   |
14 |         Self::f(); // this assumes f could call g
   |         ^^^^^^^^^

error: aborting due to 1 previous error

